Alignment fix

--- a/hb_style.css
+++ b/hb_style.css
@@ -96,6 +96,7 @@ a img {
 }
 .container {
 	margin-bottom: 100px;
+	margin-left: 35%;
 }
 .txt-box {
 	width: 150px;
